# EasyLearn-Flashcards

./: README.md  pyproject.toml
Flashcards/: LICENSE  app.py  config.toml  pyproject.toml
Flashcards/models/: flashcard.py  keyDetect.py
tests/: test-deck.toml  test_flashcardset.py
