[build-system]
requires = ["setuptools>=66.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FlashCards"
version = "0.1.0"
description = "A flashcard application."
authors = [
    { name = "Max Miles", email = "maxmiles555@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynput",
    "customtkinter"
]
[project.urls]
Homepage = "https://github.com/mileaage/EasyLearn-Flashcards"
Issues = "https://github.com/mileaage/EasyLearn-Flashcards/issues"

[tool.setuptools]
license-files = ["LICENSE*"]

