[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "EasyStudy Flashcards"
version = '0.0.1'
authors = [
    { name="Max Miles", email="maxmiles555@gmail.com"},
]

description="Free flashcard application designed to be used with AI to make some neat and useful decks"
readme="README.md"
requires-python = ">=3.9"
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license="MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
